# release-test

./: README.md  pyproject.toml
.github/workflows/: publish.yml
src/release_test/: __init__.py
src/release_test.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
