[build-system]
requires = ["setuptools>=69", "setuptools_scm[toml]>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "release-test"
description = "Test Python package for branch-based release/versioning experiments with setuptools_scm"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [{ name = "sufikaur" }]
dynamic = ["version"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "node-and-date"
