[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools >= 64", "setuptools_scm >= 8"]

[project]
name = "release-test"
dynamic = ["version"]
description = "A test package for practicing release branch + automated PyPI publishing"
readme = { file = "README.md", content-type = "text/markdown" }
license = { text = "BSD" }
requires-python = ">=3.11"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "no-local-version"
fallback_version = "0.0.0"